add units(wip), font(wip)

--- a/css/index.sass
+++ b/css/index.sass
@@ -1,18 +1,33 @@
+@font-face
+  font-family: nicoca
+  src: url('../font/nicoca_v1.ttf') format("truetype")
+
 body
   width: 100%
-  height: 10000px
+  padding-bottom: 200px
+  margin: 0
+  color: white
+  font-family: nicoca
+
+*
   margin: 0
 
-$bg-stripe-light: darken(#ff4cd2, 30%)
+.clearfix::after
+  content: ""
+  display: block
+  clear: both
+
+$risa-color: #ff4cd2
+$bg-stripe-light: darken($risa-color, 30%)
 $bg-stripe-dark: darken($bg-stripe-light, 15%)
 $bg-stripe-width: 20px
-$bg-dot-color: black //rgba(0, 0, 0, 0.7)
+$bg-dot-color: black
 $bg-dot-size: 6px
 $bg-dot-space: $bg-stripe-width
 .background
   position: fixed
   z-index: -9999
-  width: 100vw
+  width: 100%
   height: 100vh
   margin: 0
   padding: 0
@@ -43,9 +58,89 @@ $bg-dot-space: $bg-stripe-width
     background-size: $bg-dot-space*2 $bg-dot-space*2
     background-position: $bg-dot-space $bg-dot-space, $bg-dot-space*2 $bg-dot-space*2
 
-  .page-01
-    background-image: url("../img/risa-01.png")
-    opacity: 0.5
-  .page-02
-    background-image: url("../img/risa-02.png")
-    opacity: 0.5
+.contents
+  width: 100vh*9/16
+  margin: 0 auto
+    
+  .first
+    width: 100%
+    height: 100vh
+
+    .scroll-button
+      position: absolute
+      bottom: 50%
+      left: 50%
+      display: inline-block
+      transform: translate(0, 50%)
+      text-decoration: none
+      padding-top: 350px
+      color: white
+
+      $scroll-button-size: 50px
+      $scroll-button-thickness: 2px
+      $scroll-button-animation-duration: 2s
+
+      span
+        position: absolute
+        top: 0
+        left: 50%
+        width: $scroll-button-size
+        height: $scroll-button-size
+        margin-left: -$scroll-button-size/2
+        border-left: $scroll-button-thickness solid white
+        border-bottom: $scroll-button-thickness solid white
+        transform: rotate(-45deg)
+        animation: sdb $scroll-button-animation-duration infinite
+        box-sizing: border-box
+
+        $scroll-button-arrow-space: $scroll-button-size
+        $scroll-button-arrow-delay: $scroll-button-animation-duration * 0.08
+        @for $i from 1 through 5
+          &:nth-of-type(#{$i})
+            top: calc(#{$scroll-button-arrow-space} * (#{$i} - 1))
+            animation-delay: calc(#{$scroll-button-arrow-delay} * (#{$i} - 1))
+
+      @keyframes sdb
+        0%
+          transform: rotate(-45deg) translate(0, 0)
+          opacity: 0
+        50%
+          opacity: 1
+        100%
+          transform: rotate(-45deg) translate(-20px, 20px)
+          opacity: 0
+
+  h1
+    text-align: center
+
+  .content-body
+    background: rgba(0, 0, 0, 0.5)
+    font-size: 2.5vh
+    h2
+      text-align: center
+      font-size: 6vh
+    h3
+      font-size: 3.5vh
+    .box
+      width: 100vh*9/16*0.8
+      .unit-image-3
+        text-align: center
+        img
+          width: 14vh
+
+    .momo-pear-berry
+      background: rgba($risa-color, 0.4)
+    .sexy-panthers
+      background: rgba(255, 200, 0, 0.4)
+    .rough-and-fears
+      background: rgba(0, 0, 200, 0.4)
+
+    .left
+      float: left
+    .right
+      float: right
+
+    .spacer
+      height: 5vh
+      width: 100vh
+      float: left
