add risapair title

--- a/css/index.sass
+++ b/css/index.sass
@@ -177,6 +177,10 @@ $content-width: 100vh / 16 * 9
     .scroll-button
       padding-top: 120px
 
+  .plan
+    h3
+      text-align: center
+
   .last
     height: 100vh
     position: relative
