fix x-scroll bug

--- a/css/index.sass
+++ b/css/index.sass
@@ -3,7 +3,8 @@
   src: url('../font/nicoca_v1_subset.woff') format("woff")
 
 body
-  width: 100%
+  width: 100vw
+  overflow-x: hidden
   margin: 0
   color: white
   font-family: nicoca
@@ -105,7 +106,7 @@ $content-width: 100vh / 16 * 9
 .contents
   width: 100vh*9/16
   margin: 0 auto
-    
+
   .first
     width: 100%
     height: 100vh
