--- a/css/index.sass
+++ b/css/index.sass
@@ -119,7 +119,7 @@ $content-width: 100vh / 16 * 9
   .content-body
     background: rgba(0, 0, 0, 0.5)
     font-size: 2.5vh
-    overflow-x: hidden;
+    overflow: hidden;
     h2
       text-align: center
       font-size: 6vh
