add vote button

--- a/css/index.sass
+++ b/css/index.sass
@@ -193,3 +193,11 @@ $content-width: 100vh / 16 * 9
       bottom: 0
       margin-bottom: 0
       text-align: center
+
+      .vote-button
+        background: rgba(blue, 0.6)
+        color: white
+        border-radius: 1vh
+        display: inline-block
+        padding: 0 1vh
+        margin: 1vh
